# synthetix-staking-reward-algorithm-ink

./: README.md
staking_reward_contract/: Cargo.toml  lib.rs
token_one/: Cargo.toml  lib.rs
token_two/: Cargo.toml  lib.rs
